--- a/Public/Src/Sandbox/MacOs/Sandbox/Src/Resources/Info.plist
+++ b/Public/Src/Sandbox/MacOs/Sandbox/Src/Resources/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>$(BXL_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,11 +23,11 @@
 		<key>BuildXLSandbox</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.microsoft.buildxl.sandbox</string>
+			<string>$(BXL_BUNDLE_IDENTIFIER)</string>
 			<key>IOClass</key>
-			<string>com_microsoft_buildxl_Sandbox</string>
+			<string>$(BXL_CLASS_PREFIX)Sandbox</string>
 			<key>IOMatchCategory</key>
-			<string>com_microsoft_buildxl_Sandbox</string>
+			<string>$(BXL_CLASS_PREFIX)Sandbox</string>
 			<key>IOProbeScore</key>
 			<integer>1000</integer>
 			<key>IOProviderClass</key>
@@ -35,7 +35,7 @@
 			<key>IOResourceMatch</key>
 			<string>IOKit</string>
 			<key>IOUserClientClass</key>
-			<string>com_microsoft_buildxl_SandboxClient</string>
+			<string>$(BXL_CLASS_PREFIX)SandboxClient</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
