tmp: test hardlinks

--- a/Public/Src/Sandbox/MacOs/Interop/Interop.xcodeproj/xcshareddata/xcschemes/CoreDumpTester.xcscheme
+++ b/Public/Src/Sandbox/MacOs/Interop/Interop.xcodeproj/xcshareddata/xcschemes/CoreDumpTester.xcscheme
@@ -61,6 +61,16 @@
             ReferencedContainer = "container:Interop.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Users/almili/Downloads/Job-2/devmain/BuildXL/20190423-151017/BuildXL.stats"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "234"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
