--- a/Public/Src/IDE/VsCode/client/package.json
+++ b/Public/Src/IDE/VsCode/client/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "engines": {
-    "vscode": "^1.17.2"
+    "vscode": "^1.24.0"
   },
   "categories": [
     "Other"
@@ -20,7 +20,10 @@
   "main": "./out/src/extension",
   "activationEvents": [
     "onLanguage:DScript",
-    "onCommand:DScript.reloadWorkspace"
+    "onCommand:DScript.reloadWorkspace",
+    "onCommand:XLG.Render.Status",
+    "onLanguage:xlg",
+    "onLanguage:xlg-status"
   ],
   "contributes": {
     "commands": [
@@ -48,6 +51,11 @@
         "category": "DScript",
         "command": "DScript.addProject",
         "title": "%DScript.addProject.title%"
+      },
+      {
+        "category": "XLG",
+        "command": "XLG.Render.Status",
+        "title": "Render status CSV file"
       }
     ],
     "menus": {
@@ -103,6 +111,24 @@
           ".bl",
           ".bxt"
         ]
+      },
+      {
+        "id": "xlg",
+        "aliases": [
+          "BuildXLLog"
+        ],
+        "filenames": [
+          "BuildXL.log"
+        ]
+      },
+      {
+        "id": "xlg-status",
+        "aliases": [
+          "BuildXLStatus"
+        ],
+        "filenames": [
+          "BuildXL.status.csv"
+        ]
       }
     ],
     "debuggers": [
@@ -149,6 +175,53 @@
             "type": "DScript",
             "request": "attach",
             "address": "localhost"
+          }
+        ]
+      },
+      {
+        "type": "xlg",
+        "label": "BuildXL XLG Debugger",
+        "enableBreakpointsFor": {
+          "languageIds": [
+            "xlg"
+          ]
+        },
+        "program": "./out/src/debugger.js",
+        "configurationAttributes": {
+          "attach": {
+            "properties": {
+              "port": {
+                "type": "number",
+                "description": "Port number of the /m:DebugLogs analyzer process",
+                "default": 41188
+              },
+              "address": {
+                "type": "string",
+                "description": "Host name of the /m:DebugLogs analyzer process",
+                "default": "127.0.0.1"
+              }
+            }
+          }
+        },
+        "configurationSnippets": [
+          {
+            "label": "XLG: Attach",
+            "description": "Attach to a running XLG /m:DebugLogs analyzer process",
+            "body": {
+              "name": "Attach to a running /m:DebugLogs analyzer process",
+              "type": "xlg",
+              "request": "attach",
+              "debugServer": 41188
+            }
+          }
+        ],
+        "initialConfigurations": [
+          {
+            "name": "Attach to a running XLG /m:DebugLogs analyzer process",
+            "type": "xlg",
+            "request": "attach",
+            "address": "localhost",
+            "debugServer": 41188
           }
         ]
       }
@@ -252,8 +325,9 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -watch -p ./",
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
     "update-vscode": "node ./node_modules/vscode/bin/install",
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
@@ -261,13 +335,13 @@
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.52",
     "typescript": "^2.6.1",
-    "vscode": "^1.1.33"
+    "vscode": "^1.1.35"
   },
   "dependencies": {
     "vscode-languageclient": "^3.5.0",
     "vscode-nls": "^2.0.2",
-    "vscode-debugprotocol": "^1.24.0",
-    "vscode-debugadapter": "^1.24.0"
+    "vscode-debugprotocol": "1.24.0",
+    "vscode-debugadapter": "1.24.0"
   },
   "directories": {
     "bin": "./bin"
