--- a/Public/Src/IDE/VsCode/client/package.json
+++ b/Public/Src/IDE/VsCode/client/package.json
@@ -131,20 +131,23 @@
         ]
       }
     ],
+    "breakpoints": [
+      {
+        "language": "DScript"
+      },
+      {
+        "language": "xlg"
+      }
+    ],
     "debuggers": [
       {
         "type": "DScript",
         "label": "BuildXL DScript Debugger (Unsupported)",
-        "enableBreakpointsFor": {
-          "languageIds": [
-            "DScript"
-          ]
-        },
         "program": "./out/src/debugger.js",
         "configurationAttributes": {
           "attach": {
             "properties": {
-              "port": {
+              "debugServer": {
                 "type": "number",
                 "description": "%DScript.debugger.launch.port.description%",
                 "default": 41177
@@ -181,16 +184,11 @@
       {
         "type": "xlg",
         "label": "BuildXL XLG Debugger",
-        "enableBreakpointsFor": {
-          "languageIds": [
-            "xlg"
-          ]
-        },
         "program": "./out/src/debugger.js",
         "configurationAttributes": {
           "attach": {
             "properties": {
-              "port": {
+              "debugServer": {
                 "type": "number",
                 "description": "Port number of the /m:DebugLogs analyzer process",
                 "default": 41188
@@ -329,7 +327,8 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "update-vscode": "node ./node_modules/vscode/bin/install",
-    "postinstall": "node ./node_modules/vscode/bin/install"
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.33",
@@ -339,9 +338,7 @@
   },
   "dependencies": {
     "vscode-languageclient": "^3.5.0",
-    "vscode-nls": "^2.0.2",
-    "vscode-debugprotocol": "1.24.0",
-    "vscode-debugadapter": "1.24.0"
+    "vscode-nls": "^2.0.2"
   },
   "directories": {
     "bin": "./bin"
