--- a/Public/Src/IDE/Generator/CommonBuildFiles/CSharp.props
+++ b/Public/Src/IDE/Generator/CommonBuildFiles/CSharp.props
@@ -5,5 +5,5 @@
   </PropertyGroup>
 
   <Import Project="Common.props" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
+  <!--<Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />-->
 </Project>
